[package]
name = "solana-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.83"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_repr = "0.1.9"
log = "0.4"
env_logger = "0.8.4"
solana-client = { path = "../client"}
solana-sdk = { path = "../sdk"}
solana-rpc = { path = "../rpc"}
tokio = { version = "~1.14.1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
byteorder = "1.4.3"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
solana-account-decoder = { path = "../account-decoder"}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
[dev-dependencies]
solana-logger = { path = "../logger"}